Fix 17 compile errors: missing enum/methods, Java8 compat, scaleFactor